# IGVC-2017

./: .rosinstall  README.md  setup.sh
Untitled Folder/: derp.sh
igvc/Rasware2013/RASLib/src/: Startup.d  adc.d  common.d  gpio.d  gpiolinesensor.d  i2clinesensor.d  linesensor.d  motor.d  pwm.d  servomotor.d  tlemotor.d
igvc/Rasware2013/igvc_code/: igvc_vel_cmd.axf
igvc/ros_stacks/igvc_sim/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
igvc/ros_stacks/igvc_sim/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
igvc/ros_stacks/igvc_sim/catkin_generated/installspace/: igvc_sim.pc  igvc_simConfig.cmake
igvc/ros_stacks/igvc_sim/devel/: .catkin  .rosinstall  setup.sh
igvc/ros_stacks/igvc_sim/devel/share/igvc_sim/cmake/: igvc_simConfig.cmake
igvc/ros_stacks/igvc_sim/gtest/: Makefile
igvc/ros_stacks/igvc_sim/models/: database.config  database.config~
igvc/ros_stacks/igvc_sim/src/: diffdrive_plugin.cpp~
igvc/xbox_controller/: drive_with_controller.py  drive_with_controller.py~  np  p  sample.py
rasware/RASLib/src/: encoder.d  i2c.d  servo.d  sonar.d  time.d  uart.d
rasware/igvc_code/src/: .main.c.swp  main.c
roswebkit/: CMakeLists.txt  LICENSE  Makefile  manifest.xml  roswebkit.js  roswebkit.launch  roswebkit.min.js
roswebkit/http/: example.html  roswebkit.js  roswebkit.min.js
roswebkit/src/: rosauto.js  rosecho.js  rosman.js  rosmap.js  rosplot.js  rosplot2.js  rosrange.js  rosrrange.js  roswatch.js
(+69 files in other folders)
